upload content of curcuit

--- a/circuit/电路识读讲义.md
+++ b/circuit/电路识读讲义.md
@@ -10,7 +10,7 @@
 
 ### OrangePi AIpro 20T开发板
 
-![I2C](image.png)
+![I2C](images/image.png)
 
   1. ​​核心特点​​
   - ​​双线制​​：仅需两根信号线：
@@ -32,7 +32,7 @@
   
   1. 总结：I2C是一种简洁高效的串行通信标准，因其硬件成本低、扩展性强，成为嵌入式系统和物联网设备的首选协议之一。其名称的正确读法和全称体现了其设计初衷——实现集成电路间的互联通和数据交换
 
-![开关机/复位键](image-1.png)
+![开关机/复位键](images/image-1.png)
 
 - 复位键（Reset）​​：直接触发硬件复位电路，重启CPU但不完全断电，适用于系统崩溃恢复
 
@@ -42,7 +42,7 @@
   - ​短按​​：发送“软关机”信号（如ACPI的PWRBTN#信号），通知操作系统正常关机流程
   - ​长按（4秒以上）​​：直接触发硬断电（强制关机），绕过操作系统，由电源管理芯片切断主板供电
 
-![MicroUSB UART](image-2.png)实际20T板子用type-C，大致是一样的
+![MicroUSB UART](images/image-2.png)实际20T板子用type-C，大致是一样的
 
 Micro-USB接口电路​​
 - 引脚定义​​：
@@ -55,7 +55,7 @@ Micro-USB接口电路​​
 死机、无法启动时考虑充电宝电压不足问题；电池电压影响小车运动——建议使用65W快充充电宝
 
 ### 扩展板
-![扩展板原理图](image-3.png)
+![扩展板原理图](images/image-3.png)
 - 字母前缀的含义​​
   - ​​U​​：代表集成电路（IC）或芯片（如 ​​U5​​ 表示第5个IC）
   - ​​R​​：代表电阻（如 ​​R10​​ 表示第10个电阻）
