upload 0709 content of yingjianbu

--- a/masterpi1/香橙派和智能小车入门.md
+++ b/masterpi1/香橙派和智能小车入门.md
@@ -13,7 +13,7 @@
   - 创建新的conda环境```conda create -n masterpi --clone base```克隆基础环境
   - 程序中```sys.path.append('/home/pi/MasterPi/')```改成```sys.path.append('/root/thuei-1/sdk-python/')```即主文件夹所在路径（之后别的程序也都要改，可以考虑查找替换一劳永逸）
   - ColorDetect.py中```from ai_pro_pin_map import _BOARD```原先大小写打错了
-  - 开i2c修改权限（可以直接用root干所以事情，虽然方便，但这个习惯可能不大好）
+  - 如果没用root的话，建议还是用root，减少很多麻烦：开i2c修改权限
     - ```udevadm info -a /dev/i2c-7```查看信息：```KERNEL=="i2c-7"``````SUBSYSTEM=="i2c-dev"```
     - ```sudo touch /etc/udev/rules.d/50-myi2c.rules```
     - ```sudo vim /etc/udev/rules.d/50-myi2c.rules```
