update 0708 content of yingjianbu

--- a/masterpi1/香橙派和智能小车入门.md
+++ b/masterpi1/香橙派和智能小车入门.md
@@ -1,19 +1,18 @@
 # 硬件部暑培课程大纲：香橙派和智能小车
-## 前置：Copilot必备！
+## 前置
 
-- [常见登不上去的情况](https://zhuanlan.zhihu.com/p/1908234855482889076)
+Copilot必备！[常见登不上去的情况](https://zhuanlan.zhihu.com/p/1908234855482889076)
 
-- 【安装网络问题】pip install opencv-python --trusted-host pypi.tuna.tsinghua.edu.cn --trusted-host files.pythonhosted.org --trusted-host pypi.org
+【安装网络问题】pip install opencv-python --trusted-host pypi.tuna.tsinghua.edu.cn --trusted-host files.pythonhosted.org --trusted-host pypi.org
 
-- 建议重新烧录一下系统，相关资料上传在云盘：[云盘连接](https://cloud.tsinghua.edu.cn/d/a3c7a2ad2ba04069a30e/)
+摄像头USB插到香橙派上，要在开机前就插好
 
 ## 主要内容
 - 准备工作
   - ```git clone https://github.com/thuasta/thuei-1.git```克隆代码仓库
   - 创建新的conda环境```conda create -n masterpi --clone base```克隆基础环境
-  - 程序中```sys.path.append('/home/pi/MasterPi/')```改成```sys.path.append('/root/thuei-1/sdk-python/')```即主文件夹所在路径（之后别的程序也都要改，可以考虑查找替换一劳永逸）
   - ColorDetect.py中```from ai_pro_pin_map import _BOARD```原先大小写打错了
-  - 如果没用root的话，建议还是用root，减少很多麻烦：开i2c修改权限
+  - 开i2c修改权限（可以直接用root干所以事情，虽然方便，但这个习惯可能不大好）
     - ```udevadm info -a /dev/i2c-7```查看信息：```KERNEL=="i2c-7"``````SUBSYSTEM=="i2c-dev"```
     - ```sudo touch /etc/udev/rules.d/50-myi2c.rules```
     - ```sudo vim /etc/udev/rules.d/50-myi2c.rules```
@@ -45,6 +44,7 @@
   - 从这里开始，因为需要图形化界面，建议用vnc，mobaxterm也行
   - TightVNC设置密码：```vncpasswd```命令设置VNC连接密码（首次使用需要设置）
   - 启动VNC服务器：```vncserver :1 -geometry 1920x1080```设置成1080P
+  - 免密登录方法：在vncpasswd设置时，view-only密码直接回车跳过，或者修改配置文件
   - 主要了解颜色空间转换
   - 运行python3 Functions/ColorDetect.py，注意会有报错```module 'HiwonderSDK.Board' has no attribute 'RGB'```，要把.py文件中RGB相关的代码删掉，我们用不到
   - ```cap = cv2.VideoCapture('http://127.0.0.1:8080?action=stream')```括号里改成0，摄像头USB插到香橙派上
@@ -53,6 +53,7 @@
     - 因为没连USB
   - 如果遇到```No module named OPi```报错，就```pip install --upgrade OPi.GPIO```即可
 - 涉及蜂鸣器相关的参见技术文档
+  - 记得把python代码中的注释取消掉
   - 记得连31号端口
 
 ## 后续自主探索
@@ -76,3 +77,22 @@
     - 知识点：PID控制、threading模块、OpenCV图像处理、ROI感兴趣区域
   - 避障实践
     - 尝试使用```Sonar.py```，有条件的可以用if-else实现横向避障
+
+## 附录：如何让控制小车的代码更优雅
+
+### OOP
+  - 参照很多标程给的main函数方案：打开摄像头，提供入口
+```python
+def main():
+  # 打开摄像头
+  cap = cv2.VideoCapture(0)
+  robot = VisualPatrolRobot(cap)
+  robot.init()
+  robot.start()
+  signal.signal(signal.SIGINT, robot.handle_signal)
+```
+  - 小车顶层封装成robot类，实现类似中枢神经的功能
+  - 各功能
+
+注：文件中的optimized_example纯由AI生成，并且跑不了，但是整体组织形式上可供参考（OOP学以致用）
+
